# ideal-lamp

./: LICENSE  README.md  dockerfile  makefile  pyproject.toml
.github/workflows/: build-and-publish.yml
examples/: app.py
src/mymath/: lib.py
src/mymath/geometry/: rectangle.py
