[project]
name = "mymath"
version = "0.0.1"
authors = []
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/c92s/ideal-lamp"
Issues = "https://github.com/c92s/ideal-lamp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
